# FirehazardOS

./: Cargo.toml  README.md  makeuserdisk.sh
.cargo/: config.toml
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga.rs  wasm.rs
src/allocator/: block.rs  bump.rs  linked.rs
src/drivers/disk/: ata.rs  floppy.rs  mod.rs
src/fs/: block_device.rs  blockdevice.rs  filesystem.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
userdisk/HELLO/: WORLD.TXT
userdisk/sys/: welcome.txt
