[package]
name = "fhos"
version = "0.0.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
bit_field = "0.10.0"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
wasmi = { version = "0.31.2", default-features = false }
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", default-features = false, features = ["alloc", "lfn", "log_level_trace"] }
log = { version = "0.4.21", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-drive", "format=raw,file=sdc.img,bus=1"]
run-args = []
